ingress/cdn.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-cdn-service
  labels:
    app: web
  annotations:
    cloud.google.com/backend-config: '{"ports": {"3001":"my-backendconfig"}}'
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
