ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-cip
spec:
  selector:
    app: web
  ports:
    - port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: api-service-cip
spec:
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "web.NGINX_INGRESS_IP.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-service-cip
            port:
              number: 3001
  # - host: "*.NGINX_INGRESS_IP.nip.io"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: /
  #       backend:
  #         service:
  #           name: web-service-cip
  #           port:
  #             number: 3001
  - host: "api.NGINX_INGRESS_IP.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /api/status
        backend:
          service:
            name: api-service-cip
            port:
              number: 3000
  - host: "cdn.NGINX_INGRESS_IP.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-cdn-service
            port:
              number: 3001
